fixed a spacing issue for the nav buttons on the small (< 640px) media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,7 +328,7 @@ input[type=submit] {
   }
   
   .nav-link {
-    margin: 0 8%;
+    margin: 0 5%;
   }
 
   .auth-image {
